--- a/_data/cv/education.yml
+++ b/_data/cv/education.yml
@@ -1,5 +1,5 @@
-- title: 'B.Sc. (Hons) Physics & Applied Mathematics'
-  description: 'The University of Waterloo (1976-1980)'
+- title: "High School Diploma (Matura)"
+  description: "BORG Schärding, Austria (2014-2018)"
 
-- title: 'Ph.D. Theoretical High Energy Physics'
-  description: 'The University of Texas at Austin (1980-1985)'
+- title: "B.Sc. (Hons) Computer Science"
+  description: "Heriot-Watt University, Scotland (2019-2023)"
