--- a/_data/cv/education.yml
+++ b/_data/cv/education.yml
@@ -1,5 +1,5 @@
 - title: "High School Diploma (Matura)"
-  description: "BORG Schärding, Austria (2014-2018)"
+  description: "BORG Schärding, Austria (2014 - 2018)"
 
 - title: "B.Sc. (Hons) Computer Science"
-  description: "Heriot-Watt University, Scotland (2019-2023)"
+  description: "Heriot-Watt University, Scotland (2019 - 2023)"
