--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,21 @@
-url: "http://lauraschauer.github.io" # the base hostname & protocol for your site, e.g. http://example.com
+# Welcome to Jekyll!
+#
+# This config file is meant for settings that affect your whole blog, values
+# which you are expected to set up once and rarely edit after that. If you find
+# yourself editing this file very often, consider using Jekyll's data files
+# feature for the data you need to update frequently.
+#
+# For technical reasons, this file is *NOT* reloaded automatically when you use
+# 'bundle exec jekyll serve'. If you change this file, please restart the server process.
+
+title: Pietro Favaro
+email: pietro.favaro@umons.be
+description: >- # this means to ignore newlines until "baseurl:"
+  FNRS Stipend | PhD Student
 baseurl: "" # the subpath of your site, e.g. /blog
-title: "Laura Schauer" # the name of your site, e.g. ACME Corp.
-description: "Computer Scientist"
-profile-image: "https://github.com/lauraschauer/lauraschauer.github.io/blob/gh-pages/assets/img/profile-picture.jpg"
+url: "https://FavaroP.github.io" # the base hostname & protocol for your site, e.g. http://example.com
+
+# Build settings
+theme: academic-jekyll-theme
+plugins:
+  - jekyll-feed
