--- a/_config.yml
+++ b/_config.yml
@@ -16,6 +16,6 @@ baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://FavaroP.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 
 # Build settings
-theme: academic-jekyll-theme
+# theme: academic-jekyll-theme
 plugins:
   - jekyll-feed
