--- a/_config.yml
+++ b/_config.yml
@@ -1,12 +1,8 @@
-# Welcome to Jekyll!
-#
-# This config file is meant for settings that affect your whole blog, values
-# which you are expected to set up once and rarely edit after that. If you find
-# yourself editing this file very often, consider using Jekyll's data files
-# feature for the data you need to update frequently.
-#
-# For technical reasons, this file is *NOT* reloaded automatically when you use
-# 'bundle exec jekyll serve'. If you change this file, please restart the server process.
+# Set the global variables of your website here.
+# This includes:
+# - Your Name
+# - Your Job Title
+# - The Introduction on the Homepage
 
 title: Pietro Favaro
 email: pietro.favaro@umons.be
