adds CV, contact and email

--- a/_data/cv/education.yml
+++ b/_data/cv/education.yml
@@ -1,5 +1,5 @@
-- title: "B.Sc. (Hons) Physics & Applied Mathematics"
-  description: "The University of Waterloo (1976-1980)"
+- title: "Erasmus Mundus Joint Master Degree in Smart Cities and Communities (2020 - 2022)"
+  description: "Heriot Watt University, University of Mons, University of the Basque Country"
 
-- title: "Ph.D. Theoretical High Energy Physics"
-  description: "The University of Texas at Austin (1980-1985)"
+- title: "Master Degree in Electrical Engineering focus on Electrical Energy and Smart Grids (2020 - 2022)"
+  description: "University of Mons, Belgium"
