adds content to CV page and button to download CV

--- a/_data/cv/education.yml
+++ b/_data/cv/education.yml
@@ -1,5 +1,7 @@
-- title: "Erasmus Mundus Joint Master Degree in Smart Cities and Communities (2020 - 2022)"
+- title: "Erasmus Mundus Joint Master Degree in Smart Cities and Communities"
   description: "Heriot Watt University, University of Mons, University of the Basque Country"
+  years: "2020 - 2022"
 
-- title: "Master Degree in Electrical Engineering focus on Electrical Energy and Smart Grids (2020 - 2022)"
+- title: "Master Degree in Electrical Engineering focus on Electrical Energy and Smart Grids"
   description: "University of Mons, Belgium"
+  years: "2020 - 2022"
