--- a/_data/cv/research-experience.yml
+++ b/_data/cv/research-experience.yml
@@ -1,5 +1,15 @@
-- title: "First mandate of F.R.S - FNRS Research Fellow, Ph.D. Student (2022 - 2024)"
-  description: "Power Systems and Markets Research (PSMR) Group, University of Mons, Belgium"
+- title: "First mandate of F.R.S - FNRS Research Fellow, Ph.D. Student"
+  description: "PSMR Group, University of Mons, Belgium"
+  years: "2022 - 2024"
 
-- title: "Research internship on corona discharges (2020 - 2021)"
+- title: "Master Thesis on neural network constrained optimization applied ot pumped-hydro energy storage"
+  description: "PSMR Group, University of Mons, Belgium"
+  years: "2021 - 2022"
+
+- title: "Reseach internship on reinforcement learning and the imbalance settlement scheme"
+  description: "PSMR Group, University of Mons, Belgium"
+  years: "July 2021"
+
+- title: "Research internship on corona discharges"
   description: "General Physics department, University of Mons, Belgium"
+  years: "July 2020"
