--- a/_config.yml
+++ b/_config.yml
@@ -15,3 +15,4 @@ url: "https://FavaroP.github.io" # the base hostname & protocol for your site, e
 # theme: academic-jekyll-theme
 plugins:
   - jekyll-feed
+  - jekyll-sitemap
